Move JSON schemas to docs/json_schema

--- a/docs/SDPB-Manual.tex
+++ b/docs/SDPB-Manual.tex
@@ -253,7 +253,7 @@ We do not use an exponential-times-rational \texttt{Mathematica} function direct
 
 As an example bootstrap application, the included notebook \texttt{Bootstrap2dExample.m} computes a single-correlator dimension bound for 2d CFTs with a $\Z_2$ symmetry, as in \cite{Rychkov:2009ij}.
 
-The \texttt{JSON} format is described by the schema in \texttt{docs/sdp2input\_schema.json}.
+The \texttt{JSON} format is described by the schema in \texttt{docs/json_schema/sdp2input\_schema.json}.
 
 \subsection{An Example}
 \label{sec:example}
