Move LaTeX and PDF for Outer_Limits and SDPB_Manual to separate folders.

--- a/docs/Outer_Limits/Outer_Limits.tex
+++ b/docs/Outer_Limits/Outer_Limits.tex
@@ -232,7 +232,7 @@ listing~\ref{lst:functions}.
 \end{lstlisting}
 
 The exact format is specified in the JSON schema
-\texttt{docs/json_schema/functions\_schema.json}. At its heart, there is a set of
+\texttt{docs/json\_schema/functions\_schema.json}. At its heart, there is a set of
 nested arrays.  The outermost array corresponds to the $j$ index of
 $m_{j,rs}^{n}(\Delta)$, followed by $r$, $s$, and $n$.  The toy
 example has $N=2$, $J=1$, and $R_{1}=1$, so $j=r=s=1$ and $n=1$ or
@@ -270,7 +270,7 @@ problem you are solving.
 \end{lstlisting}
 
 The format for this file is specified in the JSON schema
-\texttt{docs/json_schema/points\_schema.json}. The outer array corresponds to the
+\texttt{docs/json\_schema/points\_schema.json}. The outer array corresponds to the
 $j$ index of $m_{j,rs}^{n}(\Delta)$, and the inner array is a list
 of points for that index.
 
