Update docs: use pmp2sdp instead of pvm2sdp/sdp2input

--- a/docs/SDPB_Manual/SDPB-Manual.tex
+++ b/docs/SDPB_Manual/SDPB-Manual.tex
@@ -178,12 +178,12 @@ The data can be spread over multiple files. In such cases the different input fi
 Several aspects of the input format are inefficient.  Because the matrices are symmetric, \texttt{rows} and \texttt{cols} are redundant, and most elements are listed twice.  Also, XML is extremely verbose.
 
 To improve performance for large inputs, the XML files must first be
-preprocessed into a more efficient format.  Instructions on how to
+preprocessed into a more efficient format via \texttt{pmp2sdp} program.  Instructions on how to
 preprocess the input and run SDPB are in \texttt{docs/Usage.md}.
 
 \subsection{\texttt{JSON} and \texttt{Mathematica} Interface}
 
-The program \texttt{sdp2input} generates preprocessed input files from
+The program \texttt{pmp2sdp} can also generate preprocessed input files from
 \texttt{JSON} or \texttt{Mathematica} data.
 It automatically makes sensible choices for the bilinear bases
 $q_m^{(j)}(x)$, the sample points $x_k^{(j)}$ and the sample scalings
@@ -253,7 +253,7 @@ We do not use an exponential-times-rational \texttt{Mathematica} function direct
 
 As an example bootstrap application, the included notebook \texttt{Bootstrap2dExample.m} computes a single-correlator dimension bound for 2d CFTs with a $\Z_2$ symmetry, as in \cite{Rychkov:2009ij}.
 
-The \texttt{JSON} format is described by the schema in \texttt{docs/json\_schema/sdp2input\_schema.json}.
+The \texttt{JSON} format is described by the schema in \texttt{docs/json\_schema/pmp\_schema.json}.
 
 \subsection{An Example}
 \label{sec:example}
@@ -285,12 +285,12 @@ Module[
     norm = {1, 0},
     obj  = {0, -1}
   },
-  WriteBootstrapSDP["pvm.xml", SDP[obj, norm, pols]];
+  WriteBootstrapSDP["pmp.xml", SDP[obj, norm, pols]];
 ];
 \end{lstlisting}
 It produces the following XML file
 \begin{lstlisting}[
-  caption={XML file \texttt{pvm.xml} produced by listing~\ref{mathematicaexample}.  Decimals are truncated at 12 digits.},
+  caption={XML file \texttt{pmp.xml} produced by listing~\ref{mathematicaexample}.  Decimals are truncated at 12 digits.},
   label=exampleinputfile,
   mathescape,
   columns=fullflexible,
